# ProphitAI-Backend

./: .env.example  .gitignore  .mcp.json  1.py  AGENTS.md  AGENT_STREAMING_INTEGRATION.md  API_DOCUMENTATION.md  AgentSDKWorks.py  BBGData.py  Dockerfile  FundamentalData.py  INVESTIGATION_FINDINGS.txt  INVESTIGATION_INDEX.md  Makefile  NOTES.md  PortfolioData.py  PortfolioDataPromptBuilder.py  ProphitAIGPT.py  QUICK_REFERENCE.txt  README.md  README_INVESTIGATION.txt  SNAPTRADE_MIGRATION_PLAN.md  ac.md  analyze_energy_final.py  analyze_energy_final_backtest.py  api.md  api_info.md  backend_review.md  backfill_vix.py  check_aapl_datasets.py  compare_portfolios.py  database_schema_update.py  database_schemas.json  db_architecture.txt  db_schema_map.json  evaluate_portfolio.py  factor.md  factor_2.md  file_structure.md  file_structure.txt  (+53 more)
.claude/: AGENT_LOOP_FIX.md  CLAUDE.md  (+10 more)
infra/jobs/: pyproject.toml
infra/jobs/src/prophitai_jobs/: __init__.py
infra/jobs/src/prophitai_jobs/monitor/: __init__.py  health_check.py  query_performance.py
infra/jobs/src/prophitai_jobs/runs/: __init__.py  eod.py  eow.py  intraday.py  run_all.py  screeners.py
infra/jobs/src/prophitai_jobs/screeners/: __init__.py  equity_screener.py  etf_screener.py  quant_metrics.py
infra/jobs/src/prophitai_jobs/utils/: __init__.py  fix_timezones.py  fix_transcripts.py
projects/api/: main.py  pyproject.toml
projects/api/src/prophitai_api/: app.py
projects/api/src/prophitai_api/agents/: __init__.py  chat.py  clarify.py  models.py  portfolio_builder.py  watchlist.py
projects/api/src/prophitai_api/agents/prompts/: __init__.py  chat.py  orchestrator.py
projects/api/src/prophitai_api/agents/sessions/: __init__.py  agent_session.py  chat_session.py
projects/api/src/prophitai_api/auth/: api_key.py  clerk.py
projects/api/src/prophitai_api/cache/: redis_client.py
projects/api/src/prophitai_api/controllers/: crypto.py  dashboard.py  etf.py  news.py  price.py  screeners.py  search.py  technical.py  ticker.py  trade_proposal.py  user.py
projects/api/src/prophitai_api/controllers/agent/: __init__.py  execution.py  portfolio.py
projects/api/src/prophitai_api/controllers/broker/: __init__.py  account.py  connections.py  trading.py
projects/api/src/prophitai_api/controllers/chat/: __init__.py  export.py  sessions.py
projects/api/src/prophitai_api/controllers/foundry/: __init__.py  document.py
projects/api/src/prophitai_api/controllers/fundamentals/: __init__.py  company.py  estimates.py  ratings.py
projects/api/src/prophitai_api/controllers/macro/: __init__.py  economic.py  market.py  sector.py
projects/api/src/prophitai_api/controllers/portfolio/: __init__.py  analytics.py  operations.py
projects/api/src/prophitai_api/controllers/watchlist/: __init__.py  crud.py  operations.py
projects/api/src/prophitai_api/redis/: sync_client.py
projects/api/src/prophitai_api/routes/: agent.py  broker.py  cache.py  chat.py  crypto.py  dashboard.py  document.py  etf.py  fundamentals.py  macro.py  messaging.py  news.py  portfolio.py  price.py  screener.py  search.py  technical.py  ticker.py  trade_proposal.py  user.py  watchlist.py  webhook.py  websocket.py
projects/api/src/prophitai_api/schemas/: agent.py  chat.py  etf.py  news.py  portfolio.py  price.py  ticker.py
projects/api/src/prophitai_api/services/broker/: __init__.py  account.py  connections.py  onboarding.py  proposals.py  trading.py
projects/api/src/prophitai_api/services/crypto/: news.py  price.py
projects/api/src/prophitai_api/utils/: case_conversion.py  decorators.py  exceptions.py  response_envelope.py  serialize_output.py  validation.py
projects/api/tests/: test_agent.py  test_screeners.py
projects/dreamer/: pyproject.toml
projects/dreamer/src/prophitai_dreamer/: agent.py  system.md  tool_registry.py
projects/fund/: pyproject.toml
projects/fund/src/prophitai_fund/: fund.py  helpers.py  past_ideas.md  strategy_builder.py
projects/fund/src/prophitai_fund/idea_generation/: agent.py  memory.md  system.md  tool_registry.py
projects/fund/src/prophitai_fund/idea_generator/: agent.py  memory.md  tool_registry.py
projects/fund/src/prophitai_fund/researcher/: workers.py
projects/fund/src/prophitai_fund/tools/: __init__.py  append_memory.py  load_skill.py  past_ideas.py  retrieve_memory.py  worker_registry.py
projects/fund/src/prophitai_fund/validation/: __init__.py  agent.py  memory.md  models.py  system.md  tool_registry.py
projects/fund/tests/: spec.md  test_append_memory.py  test_builder_pipeline.py  test_codebase_researcher.py  test_gpt_parser_manifest.py  test_indicator_builder.py  test_past_ideas.py  test_validator_standalone.py
projects/qc_test/: .gitignore  lean.json  pyproject.toml  run_live.sh
projects/qc_test/intraday_longshort/: config.json  custom_indicators.py  custom_risk.py
projects/qc_test/intraday_longshort/live/2026-04-22_17-00-58/: L-3490185889-2026-04-22-21_second_Strategy%20Equity.json  L-3490185889-2026-04-22_10minute.json  L-3490185889-2026-04-22_minute.json  L-3490185889-log.txt  L-3490185889.json  config  log.txt
projects/qc_test/intraday_longshort/live/2026-04-22_17-02-10/: L-3119504414-2026-04-22-21_second_Strategy%20Equity.json  L-3119504414-2026-04-22_10minute.json  L-3119504414-2026-04-22_minute.json  L-3119504414-log.txt  L-3119504414.json  config  log.txt
projects/qc_test/intraday_longshort/live/2026-04-22_17-04-50/: L-3516916186-2026-04-22-21_second_Strategy%20Equity.json  L-3516916186-2026-04-22_10minute.json  L-3516916186-2026-04-22_minute.json  L-3516916186-log.txt  L-3516916186.json  config  log.txt
projects/qc_test/intraday_longshort/live/2026-04-22_17-36-29/: config
projects/qc_test/scripts/: export_data.py
projects/substack/: main.py  pyproject.toml
projects/substack/src/prophitai_substack/trade_idea/: __init__.py  agent.py  system.md  tool_registry.py
projects/tax_harvester/: pyproject.toml
projects/tax_harvester/src/prophitai_tax_harvester/: agent.py  system.md  tool_registry.py
projects/tax_harvester/src/prophitai_tax_harvester/tools/: read_portfolio_xlsx.py
(+2230 files in other folders)
