[project]
name = "prophitai-workspace"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "prophitai-shared",
    "prophitai-atlas",
    "prophitai-calculations",
    "prophitai-data",
    "prophitai-tools",
    "prophitai-algo_trading",
    "prophitai-foundry",
    "prophitai-api",
    "prophitai-fund",
    "prophitai-substack",
    "prophitai-jobs",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
]

[tool.uv.workspace]
members = [
    "packages/*",
    "projects/api",
    "projects/fund",
    "projects/substack",
    "projects/dreamer",
    "projects/tax_harvester",
    "infra/jobs",
]

[tool.uv.sources]
prophitai-shared = { workspace = true }
prophitai-atlas = { workspace = true }
prophitai-calculations = { workspace = true }
prophitai-data = { workspace = true }
prophitai-tools = { workspace = true }
prophitai-algo_trading = { workspace = true }
prophitai-foundry = { workspace = true }
prophitai-api = { workspace = true }
prophitai-fund = { workspace = true }
prophitai-substack = { workspace = true }
prophitai-dreamer = { workspace = true }
prophitai-tax-harvester = { workspace = true }
prophitai-jobs = { workspace = true }

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "off"
