[project]
name = "prophitai-dreamer"
version = "0.1.0"
description = "ProphitAI Dreamer — nightly autonomous trade idea generator for user portfolios"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv",
    "prophitai-shared",
    "prophitai-atlas",
    "prophitai-data",
    "prophitai-tools",
    "prophitai-calculations",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prophitai_dreamer"]
