[project]
name = "prophitai-fund"
version = "0.1.0"
description = "ProphitAI Fund — autonomous investment idea generation and portfolio management"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv",
    "prophitai-shared",
    "prophitai-atlas",
    "prophitai-data",
    "prophitai-tools",
    "prophitai-calculations",
    "prophitai-foundry",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prophitai_fund"]
