[project]
name = "prophitai-qc-test"
version = "0.1.0"
description = "QuantConnect Lean intraday long/short equity strategy on ProphitAI 15-min data."
requires-python = ">=3.13"
dependencies = [
    "prophitai-data",
    "pandas",
    "lean",
]

[tool.uv.sources]
prophitai-data = { workspace = true }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
