[project]
name = "prophitai-tax-harvester"
version = "0.1.0"
description = "ProphitAI Tax Harvester — autonomous tax-loss harvesting agent for user portfolios"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv",
    "openpyxl>=3.1",
    "prophitai-shared",
    "prophitai-atlas",
    "prophitai-data",
    "prophitai-tools",
    "prophitai-calculations",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prophitai_tax_harvester"]
